--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ googleid = "1.1.1"
 datastore = "1.0.0"
 firebaseMessagingKtx = "25.0.1"
 firebaseConfigKtx = "23.0.1"
+koin = "3.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,6 +59,7 @@ googleid = { group = "com.google.android.libraries.identity.googleid", name = "g
 datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 firebase-config-ktx = { group = "com.google.firebase", name = "firebase-config-ktx", version.ref = "firebaseConfigKtx" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
