--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GoPlan">
+        android:theme="@style/Theme.GoPlan.Starting">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.GoPlan"
+            android:theme="@style/Theme.GoPlan.Starting"
             tools:ignore="Instantiatable">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
