--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Soporte obligatorio para tamaños de página de 16 KB en Android 2025
+android.native.linkerOptions=-Wl,-z,max-page-size=16384
+android.native.finalizeLinkerOutput=true
+android.native.useLegacyLlvmMte=false
